機能一覧修正

--- a/docs/機能定義/管理者/00_機能一覧.md
+++ b/docs/機能定義/管理者/00_機能一覧.md
@@ -35,9 +35,9 @@
 | 33  | アサイン管理   | タスク管理     | A05_22  | 業務差戻し                 | 業務の差し戻しを行う。一括差し戻しが可能。                                                                                                                                                          |                                                                         |
 | 34  | アサイン管理   | タスク管理     | A05_23  | 承認済み業務取消し         | 承認した業務の取り消しを行う。                                                                                                                                                                      | 業務一覧(承認済)画面より行う                                            |
 | 35  | アサイン管理   | タスク管理     | A05_25  | 業務確認申請取消し         | 顧客からのタスク確認申請(アラート)の取り消しを行う。                                                                                                                                                |                                                                         |
-| 36  | アサイン管理   | 請求管理       | A05_26  | 支払ステータス変更         | 秘書請求の支払ステータスの変更を行う。                                                                                                                                                              |                                                                         |
-| 37  | アサイン管理   | 請求管理       | A05_27  | 請求ステータス変更         | 顧客請求の請求ステータスの変更を行う。                                                                                                                                                              |                                                                         |
-| 38  | アサイン管理   | 請求管理       | A05_51  | 顧客請求データ出力         | 顧客請求書作成用データの CSV 出力を行う。                                                                                                                                                           |                                                                         |
+| 36  | アサイン管理   | 請求管理       | A05_26  | 支払ステータス変更         | 秘書請求の支払ステータスの変更を行う。                                                                                                                                                              | 未実装(保留)                                                            |
+| 37  | アサイン管理   | 請求管理       | A05_27  | 請求ステータス変更         | 顧客請求の請求ステータスの変更を行う。                                                                                                                                                              | 未実装(保留)                                                            |
+| 38  | アサイン管理   | 請求管理       | A05_51  | 顧客請求データ出力         | 顧客請求書作成用データの CSV 出力を行う。                                                                                                                                                           | 未実装(保留)                                                            |
 | 39  | アサイン管理   | 請求管理       | A05_81  | 請求サマリー表示           | 顧客に対する総請求額、請求件数(会社 × ランク)、合計稼働時間(請求ベース)、前月との総請求額の比較を自動で計算してダッシュボード形式で表示する。また、顧客ごとの請求一覧表示を行う。                   |                                                                         |
 | 40  | アサイン管理   | 請求管理       | A05_82  | 支払サマリー表示           | 秘書に対する今月の総支払額と、過去 3 か月分の月ごとの総支払額を自動で計算してダッシュボード形式で表示する。また、アサインごとの合計稼働時間、時給、支払額の一覧表示と、その合計支払額の表示を行う。 |                                                                         |
 | 41  | 売上管理       | 売上管理       | A06_81  | 売上サマリー表示           | 売上額(顧客 × 月)を自動で計算し、12 か月分の売上額を月ごとに表示する。                                                                                                                              |                                                                         |
