--- a/docs/機能定義/管理者/00_機能一覧.md
+++ b/docs/機能定義/管理者/00_機能一覧.md
@@ -1,45 +1,45 @@
-| No. | 大分類         | 小分類         | 機能 ID | 機能名                     | 概要                                                                                                                                                                                                | 備考                                                                    |
-| --- | -------------- | -------------- | ------- | -------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------- |
-| 1   | 共通業務       | 認証           | A01_91  | ログイン                   | ログインを行う                                                                                                                                                                                      |                                                                         |
-| 2   | 共通業務       | 認証           | A01_92  | ログアウト                 | ログアウトを行う                                                                                                                                                                                    |                                                                         |
-| 3   | 共通業務       | 認証           | A01_93  | パスワードの再設定         | ログインパスワードを忘れたユーザーが、登録済みのメールアドレスを使用してパスワードを再設定する。                                                                                                    |                                                                         |
-| 4   | マイページ     | マイページ     | A02_01  | マイページ表示             | 自身の情報である氏名やメールアドレスを確認できる画面を表示する。                                                                                                                                    |                                                                         |
-| 5   | マイページ     | マイページ     | A02_02  | マイページ編集             | 自身のメールアドレス、パスワード、氏名の変更を行う。                                                                                                                                                |                                                                         |
-| 6   | アカウント管理 | 全権ユーザ管理 | A04_01  | システム管理者一覧表示     | システム管理者(全権ユーザ)の一覧表示を行う。                                                                                                                                                        |                                                                         |
-| 7   | アカウント管理 | 全権ユーザ管理 | A04_02  | システム管理者新規登録     | システム管理者(全権ユーザ)の登録を行う。                                                                                                                                                            |                                                                         |
-| 8   | アカウント管理 | 全権ユーザ管理 | A04_03  | システム管理者編集         | システム管理者(全権ユーザ)の編集を行う。                                                                                                                                                            |                                                                         |
-| 9   | アカウント管理 | 全権ユーザ管理 | A04_04  | システム管理者削除         | システム管理者(全権ユーザ)の削除を行う。                                                                                                                                                            |                                                                         |
-| 10  | アカウント管理 | 秘書管理       | A04_05  | 秘書一覧表示               | 秘書の一覧表示を行う。                                                                                                                                                                              | ソートとフィルタリングが無い<br>PM 対応(可・不可)の項目が追加されている |
-| 11  | アカウント管理 | 秘書管理       | A04_06  | 秘書新規登録               | 秘書の登録を行う。                                                                                                                                                                                  | 備考欄、口座情報、緊急連絡先を含む                                      |
-| 12  | アカウント管理 | 秘書管理       | A04_07  | 秘書詳細表示               | 秘書の詳細表示を行う。                                                                                                                                                                              |                                                                         |
-| 13  | アカウント管理 | 秘書管理       | A04_08  | 秘書詳細編集               | 秘書の編集を行う。                                                                                                                                                                                  |                                                                         |
-| 14  | アカウント管理 | 秘書管理       | A04_09  | 秘書削除                   | 秘書の削除を行う。                                                                                                                                                                                  |                                                                         |
-| 15  | アカウント管理 | 顧客管理       | A04_10  | 顧客一覧表示               | 顧客の一覧表示を行う                                                                                                                                                                                | ソートとフィルタリングが無い                                            |
-| 16  | アカウント管理 | 顧客管理       | A04_11  | 顧客新規登録               | 顧客の登録を行う。                                                                                                                                                                                  |                                                                         |
-| 17  | アカウント管理 | 顧客管理       | A04_12  | 顧客詳細表示               | 顧客の詳細表示を行う。                                                                                                                                                                              |                                                                         |
-| 18  | アカウント管理 | 顧客管理       | A04_13  | 顧客詳細編集               | 顧客の編集を行う。                                                                                                                                                                                  |                                                                         |
-| 19  | アカウント管理 | 顧客管理       | A04_14  | 顧客削除                   | 顧客の削除を行う。                                                                                                                                                                                  |                                                                         |
-| 20  | アカウント管理 | 顧客管理       | A04_15  | 顧客担当者一覧表示         | 顧客担当者の一覧表示を行う。                                                                                                                                                                        |                                                                         |
-| 21  | アカウント管理 | 顧客管理       | A04_16  | 顧客担当者新規登録         | 顧客担当者の登録を行う。                                                                                                                                                                            |                                                                         |
-| 22  | アカウント管理 | 顧客管理       | A04_17  | 顧客担当者編集             | 顧客担当者の編集を行う。                                                                                                                                                                            |                                                                         |
-| 23  | アカウント管理 | 顧客管理       | A04_18  | 顧客担当者削除             | 顧客担当者の削除を行う。                                                                                                                                                                            |                                                                         |
-| 24  | アサイン管理   | アサイン管理   | A05_01  | アサイン一覧表示           | アサインの一覧表示を行う。ソートとフィルタリングが可能。                                                                                                                                            |                                                                         |
-| 25  | アサイン管理   | アサイン管理   | A05_02  | PM 秘書アサイン登録        | 顧客に対して秘書のアサイン登録を行う。                                                                                                                                                              |                                                                         |
-| 26  | アサイン管理   | アサイン管理   | A05_03  | 秘書アサイン登録           | 顧客に対して秘書のアサイン登録を行う。                                                                                                                                                              |                                                                         |
-| 27  | アサイン管理   | アサイン管理   | A05_04  | アサイン削除               | アサインの削除を行う。                                                                                                                                                                              |                                                                         |
-| 28  | アサイン管理   | アサイン管理   | A05_05  | 継続単価の変更             | アサインの継続単価の変更を行う。                                                                                                                                                                    |                                                                         |
-| 29  | アサイン管理   | アサイン管理   | A05_91  | 先月アサイン引き継ぎ       | 先月のアサイン情報を引継ぎ、アサインの登録を行う。                                                                                                                                                  |                                                                         |
-| 30  | アサイン管理   | タスク管理     | A05_06  | 業務一覧表示               | 業務の一覧表示を行う。ソートとフィルタリングが可能。タグの切り替えにより承認ステータスごとの一覧表示が可能。                                                                                        | 「月」「秘書名」「顧客名」での絞り込み検索が可能                        |
-| 31  | アサイン管理   | タスク管理     | A05_10  | 顧客タスクアラート一覧表示 | 顧客からのタスク確認申請(アラート)の一覧表示を行う。                                                                                                                                                |                                                                         |
-| 32  | アサイン管理   | タスク管理     | A05_21  | 業務承認                   | 業務の承認を行う。一括選択して一括承認が可能。                                                                                                                                                      |                                                                         |
-| 33  | アサイン管理   | タスク管理     | A05_22  | 業務差戻し                 | 業務の差し戻しを行う。一括差し戻しが可能。                                                                                                                                                          |                                                                         |
-| 34  | アサイン管理   | タスク管理     | A05_23  | 承認済み業務取消し         | 承認した業務の取り消しを行う。                                                                                                                                                                      | 業務一覧(承認済)画面より行う                                            |
-| 35  | アサイン管理   | タスク管理     | A05_25  | 業務確認申請取消し         | 顧客からのタスク確認申請(アラート)の取り消しを行う。                                                                                                                                                |                                                                         |
-| 36  | アサイン管理   | 請求管理       | A05_26  | 支払ステータス変更         | 秘書請求の支払ステータスの変更を行う。                                                                                                                                                              | 未実装(保留)                                                            |
-| 37  | アサイン管理   | 請求管理       | A05_27  | 請求ステータス変更         | 顧客請求の請求ステータスの変更を行う。                                                                                                                                                              | 未実装(保留)                                                            |
-| 38  | アサイン管理   | 請求管理       | A05_51  | 顧客請求データ出力         | 顧客請求書作成用データの CSV 出力を行う。                                                                                                                                                           | 未実装(保留)                                                            |
-| 39  | アサイン管理   | 請求管理       | A05_81  | 請求サマリー表示           | 顧客に対する総請求額、請求件数(会社 × ランク)、合計稼働時間(請求ベース)、前月との総請求額の比較を自動で計算してダッシュボード形式で表示する。また、顧客ごとの請求一覧表示を行う。                   |                                                                         |
-| 40  | アサイン管理   | 請求管理       | A05_82  | 支払サマリー表示           | 秘書に対する今月の総支払額と、過去 3 か月分の月ごとの総支払額を自動で計算してダッシュボード形式で表示する。また、アサインごとの合計稼働時間、時給、支払額の一覧表示と、その合計支払額の表示を行う。 |                                                                         |
-| 41  | 売上管理       | 売上管理       | A06_81  | 売上サマリー表示           | 売上額(顧客 × 月)を自動で計算し、12 か月分の売上額を月ごとに表示する。                                                                                                                              |                                                                         |
-| 42  | 売上管理       | 売上管理       | A06_82  | 支出サマリー表示           | 支出額(秘書 × 月)を自動で計算し、12 か月分の支出額を月ごとに表示する。                                                                                                                              |                                                                         |
-| 43  | マスタ管理     | ランク管理     | A07_01  | ランク一覧表示             | 秘書ランクと業務ランクの一覧表示を行う。                                                                                                                                                            |                                                                         |
+| No. | 業務 ID | 要求 ID                                  | 大分類         | 小分類         | 機能 ID | 機能名                     | オンライン | バッチ | 実行可能時間帯 | 概要                                                                                                                                                                                                    | 備考                                                                      |
+| --- | ------- | ---------------------------------------- | -------------- | -------------- | ------- | -------------------------- | ---------- | ------ | -------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------- |
+| 1   | A01     | FR-1, FR-2, FR-3                         | 共通業務       | 認証           | A01_91  | ログイン（全権）           | ○          |        | 0 ～ 24 時     | ログインを行う                                                                                                                                                                                          |                                                                           |
+| 2   |         | FR-1                                     |                |                | A01_94  | ログアウト（全権）         | ○          |        | 0 ～ 24 時     | ログアウトを行う                                                                                                                                                                                        |                                                                           |
+| 3   |         |                                          |                |                | A01_97  | パスワードの再設定（全権） | ○          |        | 0 ～ 24 時     | ログインパスワードを忘れたユーザーが、登録済みのメールアドレスを使用してパスワードを再設定する。                                                                                                        |                                                                           |
+| 4   | A02     | FR-46                                    | マイページ     | マイページ     | A02_01  | マイページ表示（全権）     | ○          |        | 0 ～ 24 時     | 自身の情報である氏名やメールアドレスを確認できる画面を表示する。                                                                                                                                        |                                                                           |
+| 5   |         | FR-46, FR-47                             |                |                | A02_04  | マイページ編集（全権）     | ○          |        | 0 ～ 24 時     | 自身のメールアドレス、パスワード、氏名の変更を行う。                                                                                                                                                    |                                                                           |
+| 6   | A04     |                                          | アカウント管理 | 全権ユーザ管理 | A04_01  | システム管理者一覧表示     | ○          |        | 0 ～ 24 時     | システム管理者（全権ユーザ）の一覧表示を行う。                                                                                                                                                          |                                                                           |
+| 7   |         |                                          |                |                | A04_02  | システム管理者新規登録     | ○          |        | 0 ～ 24 時     | システム管理者（全権ユーザ）の登録を行う。                                                                                                                                                              |                                                                           |
+| 8   |         |                                          |                |                | A04_03  | システム管理者編集         | ○          |        | 0 ～ 24 時     | システム管理者（全権ユーザ）の編集を行う。                                                                                                                                                              |                                                                           |
+| 9   |         |                                          |                |                | A04_04  | システム管理者削除         | ○          |        | 0 ～ 24 時     | システム管理者（全権ユーザ）の削除を行う。                                                                                                                                                              |                                                                           |
+| 10  |         | FR-9, FR-11                              |                | 秘書管理       | A04_05  | 秘書一覧表示               | ○          |        | 0 ～ 24 時     | 秘書の一覧表示を行う。                                                                                                                                                                                  | ソートとフィルタリングが無い<br>PM 対応（可・不可）の項目が追加されている |
+| 11  |         | FR-6, FR-7, FR-11                        |                |                | A04_06  | 秘書新規登録               | ○          |        | 0 ～ 24 時     | 秘書の登録を行う。                                                                                                                                                                                      | 備考は？口座情報は？緊急連絡先は？                                        |
+| 12  |         | FR-6, FR-9, FR-11                        |                |                | A04_07  | 秘書詳細表示               | ○          |        | 0 ～ 24 時     | 秘書の詳細表示を行う。                                                                                                                                                                                  |                                                                           |
+| 13  |         | FR-6, FR-12                              |                |                | A04_08  | 秘書詳細編集               | ○          |        | 0 ～ 24 時     | 秘書の編集を行う。                                                                                                                                                                                      |                                                                           |
+| 14  |         | FR-6, FR-9                               |                |                | A04_09  | 秘書削除                   | ○          |        | 0 ～ 24 時     | 秘書の削除を行う。                                                                                                                                                                                      |                                                                           |
+| 15  |         | FR-13, FR-16, FR-17                      |                | 顧客管理       | A04_10  | 顧客一覧表示               | ○          |        | 0 ～ 24 時     | 顧客の一覧表示を行う                                                                                                                                                                                    | ソートとフィルタリングが無い                                              |
+| 16  |         | FR-13                                    |                |                | A04_11  | 顧客新規登録               | ○          |        | 0 ～ 24 時     | 顧客の登録を行う。                                                                                                                                                                                      |                                                                           |
+| 17  |         | FR-13, FR-19                             |                |                | A04_12  | 顧客詳細表示               | ○          |        | 0 ～ 24 時     | 顧客の詳細表示を行う。                                                                                                                                                                                  |                                                                           |
+| 18  |         | FR-13                                    |                |                | A04_13  | 顧客詳細編集               | ○          |        | 0 ～ 24 時     | 顧客の編集を行う。                                                                                                                                                                                      |                                                                           |
+| 19  |         | FR-13                                    |                |                | A04_14  | 顧客削除                   | ○          |        | 0 ～ 24 時     | 顧客の削除を行う。                                                                                                                                                                                      |                                                                           |
+| 20  |         |                                          |                |                | A04_15  | 顧客担当者一覧表示         | ○          |        | 0 ～ 24 時     | 顧客担当者の一覧表示を行う。                                                                                                                                                                            |                                                                           |
+| 21  |         | FR-15                                    |                |                | A04_16  | 顧客担当者新規登録         | ○          |        | 0 ～ 24 時     | 顧客担当者の登録を行う。                                                                                                                                                                                |                                                                           |
+| 22  |         |                                          |                |                | A04_17  | 顧客担当者編集             | ○          |        | 0 ～ 24 時     | 顧客担当者の編集を行う。                                                                                                                                                                                |                                                                           |
+| 23  |         |                                          |                |                | A04_18  | 顧客担当者削除             | ○          |        | 0 ～ 24 時     | 顧客担当者の削除を行う。                                                                                                                                                                                |                                                                           |
+| 24  | A05     | FR-27                                    | アサイン管理   | アサイン管理   | A05_01  | アサイン一覧表示           | ○          |        | 0 ～ 24 時     | アサインの一覧表示を行う。ソートとフィルタリングが可能。                                                                                                                                                |                                                                           |
+| 25  |         |                                          |                |                | A05_02  | PM 秘書アサイン登録        | ○          |        | 0 ～ 24 時     | 顧客に対して秘書のアサイン登録を行う。                                                                                                                                                                  |                                                                           |
+| 26  |         | FR-22, FR-23, FR-24, FR-25, FR-26, FR-46 |                |                | A05_03  | 秘書アサイン登録           | ○          |        | 0 ～ 24 時     | 顧客に対して秘書のアサイン登録を行う。                                                                                                                                                                  |                                                                           |
+| 27  |         |                                          |                |                | A05_04  | アサイン削除               | ○          |        | 0 ～ 24 時     | アサインの削除を行う。                                                                                                                                                                                  |                                                                           |
+| 28  |         |                                          |                |                | A05_05  | 継続単価の変更             | ○          |        | 0 ～ 24 時     | アサインの継続単価の変更を行う。                                                                                                                                                                        |                                                                           |
+| 29  |         | FR-22, FR-27                             |                |                | A05_91  | 先月アサイン引き継ぎ       | ○          |        | 0 ～ 24 時     | 先月のアサイン情報を引継ぎ、アサインの登録を行う。                                                                                                                                                      |                                                                           |
+| 30  |         | FR-35                                    |                | タスク管理     | A05_06  | 業務一覧表示               | ○          |        | 0 ～ 24 時     | 業務の一覧表示を行う。ソートとフィルタリングが可能。タグの切り替えにより承認ステータスごとの一覧表示が可能。                                                                                            | 「月」「秘書名」「顧客名」での絞り込み検索が可能                          |
+| 31  |         |                                          |                |                | A05_10  | 顧客タスクアラート一覧表示 | ○          |        | 0 ～ 24 時     | 顧客からのタスク確認申請（アラート）の一覧表示を行う。                                                                                                                                                  |                                                                           |
+| 32  |         | FR-30, FR-33, FR-34, FR-35               |                |                | A05_21  | 業務承認                   | ○          |        | 0 ～ 24 時     | 業務の承認を行う。一括選択して一括承認が可能。                                                                                                                                                          |                                                                           |
+| 33  |         | FR-30, FR-33, FR-34                      |                |                | A05_22  | 業務差戻し                 | ○          |        | 0 ～ 24 時     | 業務の差し戻しを行う。一括差し戻しが可能。                                                                                                                                                              |                                                                           |
+| 34  |         | FR-30, FR-33, FR-34                      |                |                | A05_23  | 承認済み業務取消し         | ○          |        | 0 ～ 24 時     | 承認した業務の取り消しを行う。                                                                                                                                                                          | 業務一覧（承認済）画面より行う                                            |
+| 35  |         | FR-30, FR-33, FR-34                      |                |                | A05_25  | 業務確認申請取消し         | ○          |        | 0 ～ 24 時     | 顧客からのタスク確認申請（アラート）の取り消しを行う。                                                                                                                                                  |                                                                           |
+| 36  |         | FR-39                                    |                | 請求管理       | A05_26  | 支払ステータス変更         | ○          |        | 0 ～ 24 時     | 秘書請求の支払ステータスの変更を行う。                                                                                                                                                                  | 未実装                                                                    |
+| 37  |         | FR-39                                    |                |                | A05_27  | 請求ステータス変更         | ○          |        | 0 ～ 24 時     | 顧客請求の請求ステータスの変更を行う。                                                                                                                                                                  | 未実装                                                                    |
+| 38  |         | FR-41                                    |                |                | A05_51  | 顧客請求データ出力         | ○          |        | 0 ～ 24 時     | 顧客請求書作成用データの CSV 出力を行う。                                                                                                                                                               | 未実装                                                                    |
+| 39  |         | FR-38                                    |                |                | A05_81  | 請求サマリー表示           | ○          |        | 0 ～ 24 時     | 顧客に対する総請求額、請求件数（会社 × ランク）、合計稼働時間（請求ベース）、前月との総請求額の比較を自動で計算してダッシュボード形式で表示する。また、顧客ごとの請求一覧表示を行う。                   |                                                                           |
+| 40  |         | FR-38                                    |                |                | A05_82  | 支払サマリー表示           | ○          |        | 0 ～ 24 時     | 秘書に対する今月の総支払額と、過去 3 か月分の月ごとの総支払額を自動で計算してダッシュボード形式で表示する。<br>また、アサインごとの合計稼働時間、時給、支払額の一覧表示と、その合計支払額の表示を行う。 |                                                                           |
+| 41  | A06     | FR-45                                    | 売上管理       | 売上管理       | A06_81  | 売上サマリー表示           | ○          |        | 0 ～ 24 時     | 売上額（顧客 × 月）を自動で計算し、12 か月分の売上額を月ごとに表示する。                                                                                                                                |                                                                           |
+| 42  |         | FR-45                                    |                |                | A06_82  | 支出サマリー表示           | ○          |        | 0 ～ 24 時     | 支出額（秘書 × 月）を自動で計算し、12 か月分の支出額を月ごとに表示する。                                                                                                                                |                                                                           |
+| 43  | A07     |                                          | マスタ管理     | ランク管理     | A07_01  | ランク一覧表示             | ○          |        | 0 ～ 24 時     | 秘書ランクと業務ランクの一覧表示を行う。                                                                                                                                                                |                                                                           |
