プロジェクト名をBackDeskに修正

--- a/docs/機能定義/管理者/01_ログイン.md
+++ b/docs/機能定義/管理者/01_ログイン.md
@@ -2,7 +2,7 @@
 
 ## 機能概要
 
-システム管理者がメールアドレスとパスワードを使用してHidariudeシステムにログインする機能です。認証成功時にセッションが作成され、管理者ホーム画面へ遷移します。
+システム管理者がメールアドレスとパスワードを使用してBackDeskシステムにログインする機能です。認証成功時にセッションが作成され、管理者ホーム画面へ遷移します。
 
 ## 実装状況
 
