excelの機能一覧を反映

--- a/docs/機能定義/秘書/00_機能一覧.md
+++ b/docs/機能定義/秘書/00_機能一覧.md
@@ -1,16 +1,16 @@
-| No. | 大分類           | 小分類           | 機能 ID | 機能名                         | 概要                                                                                                                                                            | 備考                                                           |
-| --- | ---------------- | ---------------- | ------- | ------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------- |
-| 1   | 共通業務         | 認証             | A01_91  | ログイン                       | ログインを行う。                                                                                                                                                |                                                                |
-| 2   | 共通業務         | 認証             | A01_92  | ログアウト                     | ログアウトを行う。                                                                                                                                              |                                                                |
-| 3   | 共通業務         | 認証             | A01_93  | パスワードの再設定(ログイン前) | ログインパスワードを忘れたユーザーが、登録済みのメールアドレスを使用してパスワードを再設定する。                                                                |                                                                |
-| 4   | マイページ       | マイページ       | A02_01  | マイページ表示                 | マイページの表示を行う。                                                                                                                                        | 画面上ではマイページではなく「ID 管理」                        |
-| 5   | マイページ       | マイページ       | A02_02  | マイページ編集                 | マイページの編集を行う。パスワードの変更も含む。                                                                                                                | 口座情報の情報を変更で追加できる                               |
-| 6   | プロフィール管理 | プロフィール管理 | A03_01  | プロフィール表示               | プロフィールの表示を行う。                                                                                                                                      | 稼働可否、備考、資格保持状況、職歴、最終学歴、自己紹介をみれる |
-| 7   | プロフィール管理 | プロフィール管理 | A03_02  | プロフィール登録               | プロフィールの登録を行う。                                                                                                                                      | プロフィール登録を行う初回のみ                                 |
-| 8   | プロフィール管理 | プロフィール管理 | A03_03  | プロフィール編集               | プロフィールの編集を行う。資格・職歴・学歴・自己紹介などの基本情報のほか、稼働条件を登録できる。                                                                |                                                                |
-| 9   | アサイン管理     | タスク管理       | A05_06  | 業務一覧表示                   | 業務の一覧表示を行う。タグの切り替えにより承認ステータスごとの一覧表示が可能。                                                                                  | ソートとフィルタリングはなし                                   |
-| 10  | アサイン管理     | タスク管理       | A05_07  | 業務登録                       | 業務の登録を行う。                                                                                                                                              |                                                                |
-| 11  | アサイン管理     | タスク管理       | A05_08  | 業務変更                       | 業務一覧から業務の変更を行う。                                                                                                                                  |                                                                |
-| 12  | アサイン管理     | タスク管理       | A05_09  | 業務削除                       | 業務一覧からの業務の削除を行う。                                                                                                                                |                                                                |
-| 13  | アサイン管理     | 請求管理         | A05_52  | 秘書請求書発行                 | 秘書請求書の発行(Excel 出力)を行う。                                                                                                                            |                                                                |
-| 14  | アサイン管理     | 請求管理         | A05_82  | 秘書請求サマリー表示           | 総請求額、請求件数(会社 × ランク)、合計稼働(請求ベース)、タスク件数をダッシュボード形式で表示する。また、会社別請求、承認済み業務、未承認業務の一覧表示を行う。 |                                                                |
+| No. | 業務 ID | 要求 ID          | 大分類           | 小分類           | 機能 ID | 機能名                     | オンライン | バッチ | 実行可能時間帯 | 概要                                                                                                                                                                    | 備考                                                           |
+| --- | ------- | ---------------- | ---------------- | ---------------- | ------- | -------------------------- | ---------- | ------ | -------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------- |
+| 1   | A01     | FR-1, FR-2, FR-3 | 共通業務         | 認証             | A01_92  | ログイン（秘書）           | ○          |        | 0 ～ 24 時     | ログインを行う。                                                                                                                                                        |                                                                |
+| 2   |         | FR-1             |                  |                  | A01_95  | ログアウト（秘書）         | ○          |        | 0 ～ 24 時     | ログアウトを行う。                                                                                                                                                      |                                                                |
+| 3   |         |                  |                  |                  | A01_98  | パスワードの再設定（秘書） | ○          |        | 0 ～ 24 時     | ログインパスワードを忘れたユーザーが、登録済みのメールアドレスを使用してパスワードを再設定する。                                                                        |                                                                |
+| 4   | A02     | FR-11            | マイページ       | マイページ       | A02_02  | マイページ表示（秘書）     | ○          |        | 0 ～ 24 時     | マイページの表示を行う。                                                                                                                                                | 画面上ではマイページではなく「ID 管理」                        |
+| 5   |         |                  |                  |                  | A02_05  | マイページ編集（秘書）     | ○          |        | 0 ～ 24 時     | マイページの編集を行う。パスワードの変更も含む。                                                                                                                        | 口座情報の情報を変更で追加できる                               |
+| 6   | A03     | FR-46            | プロフィール管理 | プロフィール管理 | A03_01  | プロフィール表示           | ○          |        | 0 ～ 24 時     | プロフィールの表示を行う。                                                                                                                                              | 稼働可否、備考、資格保持状況、職歴、最終学歴、自己紹介をみれる |
+| 7   |         | FR-46, FR-47     |                  |                  | A03_02  | プロフィール登録           | ○          |        | 0 ～ 24 時     | プロフィールの登録を行う。                                                                                                                                              | プロフィール登録を行う初回のみ                                 |
+| 8   |         | FR-46, FR-47     |                  |                  | A03_03  | プロフィール編集           | ○          |        | 0 ～ 24 時     | プロフィールの編集を行う。<br>資格・職歴・学歴・自己紹介などの基本情報のほか、稼働条件を登録できる。                                                                    |                                                                |
+| 9   | A05     | FR-31, FR-36     | アサイン管理     | タスク管理       | A05_06  | 業務一覧表示               | ○          |        | 0 ～ 24 時     | 業務の一覧表示を行う。タグの切り替えにより承認ステータスごとの一覧表示が可能。                                                                                          | ソートとフィルタリングはなし                                   |
+| 10  |         | FR-31, FR-32     |                  |                  | A05_07  | 業務登録                   | ○          |        | 0 ～ 24 時     | 業務の登録を行う。                                                                                                                                                      |                                                                |
+| 11  |         | FR-31            |                  |                  | A05_08  | 業務変更                   | ○          |        | 0 ～ 24 時     | 業務一覧から業務の変更を行う。                                                                                                                                          |                                                                |
+| 12  |         | FR-31            |                  |                  | A05_09  | 業務削除                   | ○          |        | 0 ～ 24 時     | 業務一覧からの業務の削除を行う。                                                                                                                                        |                                                                |
+| 13  |         | FR-43, FR-44     |                  | 請求管理         | A05_52  | 秘書請求書発行             | ○          |        | 0 ～ 24 時     | 秘書請求書の発行（Excel 出力）を行う。                                                                                                                                  |                                                                |
+| 14  |         | FR-36            |                  |                  | A05_83  | 秘書請求サマリー表示       | ○          |        | 0 ～ 24 時     | 総請求額、請求件数（会社 × ランク）、合計稼働（請求ベース）、タスク件数をダッシュボード形式で表示する。<br>また、会社別請求、承認済み業務、未承認業務の一覧表示を行う。 |                                                                |
