--- a/docs/機能定義/顧客/00_機能一覧.md
+++ b/docs/機能定義/顧客/00_機能一覧.md
@@ -1,11 +1,11 @@
-| No. | 大分類       | 小分類       | 機能 ID | 機能名               | 概要                                                                                                                                                                        |
-| --- | ------------ | ------------ | ------- | -------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 1   | 共通業務     | 認証         | A01_91  | ログイン             | ログインを行う。                                                                                                                                                            |
-| 2   | 共通業務     | 認証         | A01_92  | ログアウト           | ログアウトを行う。                                                                                                                                                          |
-| 3   | 共通業務     | 認証         | A01_93  | パスワードの再設定   | パスワードを忘れた際にパスワードの再設定を行う。                                                                                                                            |
-| 4   | マイページ   | マイページ   | A02_01  | マイページ表示       | マイページの表示を行う。                                                                                                                                                    |
-| 5   | マイページ   | マイページ   | A02_02  | マイページ編集       | マイページの変更を行う。パスワードの変更も含む。                                                                                                                            |
-| 7   | アサイン管理 | アサイン管理 | A05_05  | 委託先秘書一覧表示   | 第三者委託先の一覧表示を行う。                                                                                                                                              |
-| 8   | アサイン管理 | タスク管理   | A05_06  | 業務一覧表示         | 秘書が登録した業務の一覧表示を行う。                                                                                                                                        |
-| 9   | アサイン管理 | タスク管理   | A05_24  | 業務確認申請         | 秘書の登録した業務に異議がある場合、全権ユーザに対して差戻の申請を行う。                                                                                                    |
-| 10  | アサイン管理 | 請求管理     | A05_84  | 顧客支払サマリー表示 | 総支払額、支払件数(秘書 × ランク)、合計稼働時間(支払ベース)、タスク件数をダッシュボード形式で表示する。また、秘書別(アサイン別)支払金額と登録されたタスクの一覧表示を行う。 |
+| No. | 業務 ID | 要求 ID                 | 大分類       | 小分類       | 機能 ID | 機能名                     | オンライン | バッチ | 実行可能時間帯 | 概要                                                                                                                                                                                  | 試作品 | 備考                                                 |
+| --- | ------- | ----------------------- | ------------ | ------------ | ------- | -------------------------- | ---------- | ------ | -------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ | ---------------------------------------------------- |
+| 1   | A01     | FR-1, FR-2, FR-3, FR-15 | 共通業務     | 認証         | A01_93  | ログイン（顧客）           | ○          |        | 0 ～ 24 時     | ログインを行う。                                                                                                                                                                      | ○      | ※権限は秘書、顧客、全権ユーザの 3 区分に分かれている |
+| 2   |         | FR-1                    |              |              | A01_96  | ログアウト（顧客）         | ○          |        | 0 ～ 24 時     | ログアウトを行う。                                                                                                                                                                    | ○      |                                                      |
+| 3   |         |                         |              |              | A01_99  | パスワードの再設定（顧客） | ○          |        | 0 ～ 24 時     | ログインパスワードを忘れたユーザーが、登録済みのメールアドレスを使用してパスワードを再設定する。                                                                                      | ×      |                                                      |
+| 4   | A02     |                         | マイページ   | マイページ   | A02_03  | マイページ表示（顧客）     | ○          |        | 0 ～ 24 時     | マイページの表示を行う。                                                                                                                                                              | ○      |                                                      |
+| 5   |         |                         |              |              | A02_06  | マイページ編集（顧客）     | ○          |        | 0 ～ 24 時     | マイページの変更を行う。パスワードの変更も含む。                                                                                                                                      | ○      |                                                      |
+| 6   | A05     |                         | アサイン管理 | アサイン管理 | A05_05  | 委託先秘書一覧表示         | ○          |        | 0 ～ 24 時     | 第三者委託先の一覧表示を行う。                                                                                                                                                        | ○      |                                                      |
+| 7   |         | FR-37                   |              | タスク管理   | A05_06  | 業務一覧表示               | ○          |        | 0 ～ 24 時     | 秘書が登録した業務の一覧表示を行う。                                                                                                                                                  | ○      |                                                      |
+| 8   |         |                         |              |              | A05_24  | 業務確認申請               | ○          |        | 0 ～ 24 時     | 秘書の登録した業務に異議がある場合、全権ユーザに対して差戻の申請を行う。                                                                                                              | ○      |                                                      |
+| 9   |         | FR-40                   |              | 請求管理     | A05_84  | 顧客支払サマリー表示       | ○          |        | 0 ～ 24 時     | 総支払額、支払件数（秘書 × ランク）、合計稼働時間（支払ベース）、タスク件数をダッシュボード形式で表示する。<br>また、秘書別（アサイン別）支払金額と登録されたタスクの一覧表示を行う。 | ○      |                                                      |
